[package]
name = "test-contract"
version = "0.3.0"
workspace = "../../"
edition = "2018"

[features]
test-bpf = []
no-entrypoint = []

[dependencies]
pyth-sdk-solana = { path = "../", version = "0.10.6" }
solana-program = ">= 1.10"
bytemuck = "1.7.2"
borsh.workspace = true


[dev-dependencies]
solana-program-test = ">= 1.10"
solana-client = ">= 1.10"
solana-sdk = ">= 1.10"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
